[tool.poetry]
name = "swift-banker-application"
version = "0.1.0"
description = "Swift Bankers' Backend"
authors = ["Florent Haxhiu <florenthaxhiu03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
